# futurama

./: .gitignore  .merlin  .travis.yml  PLAN  aoc17_day16.ml  danse.tex  disjoint_cycles.ml  dot.ml  eleve.tex  faded.tex  fixed.ml  fixed.mli  floyd.ml  futurama.ml  latex.ml  named.ml  permutations.opam  public.txt  sim.ods  tpl.tex  util.ml
.github/workflows/: latex.yml  release.yml
dance/: .gitignore  Makefile  dance.ml  dune  explain.ml  part1.c  part2.c  test.ml  test2.ml
dance/lib/: adapter.ml  aoc17_day16.ml  circle.ml  circle.mli  disjoint_cycles.ml  dune  functional.ml  functional.mli  group.ml  latex.ml  model.ml  operation.ml  permutation.ml  table.ml  table.mli  tikz.ml  tools.ml
doc/: tpl.tex
lib/: aoc17_day16.ml  charmap.ml  circle.ml  circle.mli  disjoint_cycles.ml  dune  fixed.ml  floyd.ml  functional.ml  functional.mli  latex.ml  model.ml  naive.ml  naive.mli  named.ml  named.mli  operation.ml  table.ml  table.mli  tools.ml
paper/: cigale-fourmi.txt  danse.tex  eleve.tex  headers.tex  prof.tex
paper/src/: headers.tex
stress-gcc/: .gitignore  Makefile
tests/: dune  rubik.ml  wires.ml
toy/: .gitignore  Makefile  index.html  js.html  main.pas  main.py  sim.py  solution.js  to_c  to_js  to_pascal_input  to_python
