opam-version: "1.2"
name: "permutations"
version: "0.2"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
homepage: "https://github.com/ghuysmans/permutations/"
bug-reports: "https://github.com/ghuysmans/permutations/issues"
dev-repo: "git://github.com/ghuysmans/permutations/"
build: [["dune" "build" "-p" name "-j" jobs]]
synopsis: "Finite permutation library with an optimizing compiler"
depends: [
  "dune" {build}
  "algebra"
  "dot"
]
